@@ -1,7 +1,7 @@
 # Mac OSX makefile for OpenJPEG
 
 VER_MAJOR = 1
-VER_MINOR = 0.0
+VER_MINOR = 1.1
 
 SRCS = ./libopenjpeg/bio.c ./libopenjpeg/cio.c ./libopenjpeg/dwt.c ./libopenjpeg/event.c ./libopenjpeg/image.c ./libopenjpeg/j2k.c ./libopenjpeg/j2k_lib.c ./libopenjpeg/jp2.c ./libopenjpeg/jpt.c ./libopenjpeg/mct.c ./libopenjpeg/mqc.c ./libopenjpeg/openjpeg.c ./libopenjpeg/pi.c ./libopenjpeg/raw.c ./libopenjpeg/t1.c ./libopenjpeg/t2.c ./libopenjpeg/tcd.c ./libopenjpeg/tgt.c
 INCLS = ./libopenjpeg/bio.h ./libopenjpeg/cio.h ./libopenjpeg/dwt.h ./libopenjpeg/event.h ./libopenjpeg/fix.h ./libopenjpeg/image.h ./libopenjpeg/int.h ./libopenjpeg/j2k.h ./libopenjpeg/j2k_lib.h ./libopenjpeg/jp2.h ./libopenjpeg/jpt.h ./libopenjpeg/mct.h ./libopenjpeg/mqc.h ./libopenjpeg/openjpeg.h ./libopenjpeg/pi.h ./libopenjpeg/raw.h ./libopenjpeg/t1.h ./libopenjpeg/t2.h ./libopenjpeg/tcd.h ./libopenjpeg/tgt.h ./libopenjpeg/opj_includes.h
@@ -11,9 +11,11 @@ INCLUDE = -Ilibopenjpeg
 CC = gcc
 LIBTOOL = libtool
 
-INSTALLDIR = /usr/lib
+PREFIX = /usr
+INSTALL_LIBDIR = $(PREFIX)/lib
+INSTALL_INCLUDE = $(PREFIX)/include
 
-COMPILERFLAGS = -O3
+COMPILERFLAGS = -O3 -fPIC
 LIBRARIES = -lc -lgcc -lstdc++
 
 MODULES = $(SRCS:.c=.o)
@@ -28,13 +30,14 @@ LIBNAME = lib$(TARGET).dylib.$(VER_MAJOR)
 
 default: all
 
-all: dist
+all: OpenJPEG
 
 dist: OpenJPEG
-	mkdir dist
-	cp *.a dist/
-	cp *.dylib dist/
-	cp libopenjpeg/openjpeg.h dist/
+	install -d dist
+	install -m 644 $(STATICLIB) dist
+	install -m 755 $(SHAREDLIB) dist
+	ln -sf $(SHAREDLIB) dist/$(LIBNAME)
+	install libopenjpeg/openjpeg.h dist
 
 OpenJPEG: $(STATICLIB) $(SHAREDLIB)
 
@@ -48,10 +51,13 @@ $(SHAREDLIB): $(MODULES)
 	$(LIBTOOL) -dynamic $(LIBRARIES) -o $@ $(MODULES)
 
 install:
-	install -m 644 -o root -g wheel $(STATICLIB) $(INSTALLDIR)
-	install -m 755 -o root -g wheel $(SHAREDLIB) $(INSTALLDIR)
-	ln -sf $(SHAREDLIB) $(INSTALLDIR)/$(LIBNAME)
-	ranlib $(INSTALLDIR)/$(STATICLIB)
+	install -d '$(DESTDIR)$(INSTALL_LIBDIR)' '$(DESTDIR)$(INSTALL_INCLUDE)'
+	install -m 644 -o root -g wheel $(STATICLIB) '$(DESTDIR)$(INSTALL_LIBDIR)'
+	ranlib '$(DESTDIR)$(INSTALL_LIBDIR)/$(STATICLIB)'
+	install -m 755 -o root -g wheel $(SHAREDLIB) '$(DESTDIR)$(INSTALL_LIBDIR)'
+	ln -sf $(SHAREDLIB) '$(DESTDIR)$(INSTALL_LIBDIR)/$(LIBNAME)'
+	install -m 644 -o root -g root libopenjpeg/openjpeg.h '$(DESTDIR)$(INSTALL_INCLUDE)'
+	-ldconfig
 
 clean:
 	rm -rf core dist/ u2dtmp* $(MODULES) $(STATICLIB) $(SHAREDLIB) $(LIBNAME)
