@@ -13,7 +13,8 @@ Please let us know how this works for you under other Linux distributions or any
 
 Installation
 ------------
-Note: You will need to have root privileges in order to install the library in the /usr/lib directory.
+Note: You will need to have root privileges in order to install the library in
+/usr/include and /usr/lib directories.
 The installation process is as simple as this : 
 1) Enter the OpenJPEG directory
 2) Build the distribution : 
@@ -26,7 +27,7 @@ Simple codec compilation
 ------------------------
 Once you've built the library, you might want to test it with a basic codec. To do this, go to the codec directory and use one of the following commands to build an encoder and decoder respectively:
 
-gcc convert.c image_to_j2k.c -o image_to_j2k -lopenjpeg -I ../libopenjpeg/ -lm
-gcc convert.c j2k_to_image.c -o j2k_to_image -lopenjpeg -I ../libopenjpeg/ -lm
+gcc convert.c image_to_j2k.c -o image_to_j2k -lopenjpeg -I ../libopenjpeg/ -lm -ltiff
+gcc convert.c j2k_to_image.c -o j2k_to_image -lopenjpeg -I ../libopenjpeg/ -lm -ltiff
 
 You should add '-L..' to those lines if you did not use the 'install' target (and the 'clean' target neither...).
